Fix NavHeader z-index

--- a/src/components/NavHeader/NavHeader.module.css
+++ b/src/components/NavHeader/NavHeader.module.css
@@ -17,7 +17,7 @@ MOBILE
 }
 
 .navHeader {
-  z-index: 1;
+  z-index: 4;
   position: fixed;
   top: 0;
   width: 100%;
